# DVCTracker

./: .gitattributes  .gitignore  Criteria Doc.md  Dockerfile  LICENSE  Pipfile  Procfile  README.md  captain-definition  config.py  criteria.toml  dvctracker.py  dvctracker_settings.cfg  ghp_release.py  main.py  manage.py  pyproject.toml  requirements.txt  schedule  schedule.yml  scheduler.sh  static_data.toml
.github/workflows/: pages_release.yml
app/: __init__.py  blueprint.py  cli.py  criteria.py  customjsonencoder.py  customjsonprovider.py  errors.py  message.py  models.py  security.py  util.py
app/auth/: __init__.py
app/main/: __init__.py  forms.py  util.py  views.py
app/main/forms/: fields.py  forms.py  validators.py
app/main/specials/: __init__.py  views.py
app/main/user/: views.py
app/notifications/: __init__.py  views.py
app/notifications/send/: __init__.py  apns.py  (+4 more)
app/parsers/: __init__.py  base_parser.py  dvcrentalstore.py  dvcrentalstore_confirmed_2021.py  dvcrentalstore_points.py  dvcrentalstore_preconfirms.py
app/static/: bootstrap.min.css  bootstrap.min.css.map
app/templates/: base.html  disc_points_template.html  email_template.html  empty_parser_template.html  error_template.html  pre-confirmed_template.html  preconfirmed_template.html
migrations/: env.py
migrations/versions/: 1974882d8271_add_user_model.py  22d42f460088_add_relationships_from_contacts_to_users.py  28031748b406_add_important_criteria_to_user_model.py  2c63a547a651_drop_user_model_to_make_it_easier_to_.py  30771795601d_add_room_index_to_room_model.py  359b5da2304f_add_static_index_column_to_.py  39a23132999a_increase_the_string_length_of_url_.py  3a38ba5c6894_add_last_updated_column_to_status.py  3c1c384d9445_add_pushtoken_model.py  464427226fe9_update_dvcrs_preconfirm_fields.py  4a88e85d1538_add_parserstatus_table.py  4b429e00aebf_add_source_name_attribute_to_special.py  5335069d04aa_separate_room_and_view_in_special.py  714e287b67c4_add_categories.py  82b7b8e092bb_make_the_type_column_an_enum_typee.py  93c7710478e8_add_characteristic_models_resort_room_.py  ee766ed83bca_initial_migration.py
templates/: disc_points_template.html  email_template.html  pre-confirmed_template.html
(+21 files in other folders)
