[tool.poetry]
name = "dvctracker"
description = "Track DVC Specials and get notified of changes as they happen."
authors = ["George Waters <gwatersdev@gmail.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
sqlalchemy = {extras = ["postgresql"], version = "^2.0.30"}
requests = "^2.31.0"
lxml = "^5.2.1"
gunicorn = "^23.0.0"
tomlkit = "^0.13.2"
flask-migrate = "^4.0.7"
twilio = "^9.0.5"
flask-httpauth = "^4.8.0"
flask-wtf = {extras = ["email"], version = "^1.2.1"}
flask-talisman = "^1.1.0"
phonenumbers = "^8.13.36"
python-dateutil = "^2.9.0.post0"
yacron = "^0.19.0"
passlib = {extras = ["argon2"], version = "^1.7.4"}
apns2 = {git = "https://github.com/dunkmann00/PyAPNs2.git", rev = "httpx"}
premailer = {git = "https://github.com/dunkmann00/premailer.git", rev = "parsestyle-validate-option"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
